--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend-starter",
-  "version": "1.0.0",
+  "name": "crosscaster-frontend",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "start": "yarn generate-css-types && vite",
@@ -8,7 +8,6 @@
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
     "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts",
-    "update": "yarn build && rm -r docs && cp -r dist docs && git add . && git commit -m 'update' && git push",
     "preview": "yarn build && yarn vite preview"
   },
   "browserslist": {
@@ -26,8 +25,7 @@
   "dependencies": {
     "@vitejs/plugin-react": "^2.2.0",
     "preact": "^10.11.3",
-    "unfetch": "^4.2.0",
-    "valtio": "^1.7.6"
+    "unfetch": "^4.2.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.4.0",
@@ -44,7 +42,6 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "eslint-plugin-valtio": "^0.6.1",
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
     "react-scripts": "^5.0.1",
